--- a/public/style.css
+++ b/public/style.css
@@ -56,6 +56,7 @@ header div{
 .feed{
     width: 614px;
     margin-top: 24px;
+    border: 2px solid purple;
 }
 .post{
     width: 614px;
@@ -64,6 +65,22 @@ header div{
     margin-bottom: 60px;
     border: 3px solid #DBDBDB;
     border-radius: 3px;
+}
+.post img{
+    width: 100%;
+}
+.post-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 12px;
+}
+.post-header div:nth-child(1){
+    display: flex;
+    align-items: center;
+}
+.post-header strong {
+    margin-left: 12px;
 }
 .sideBar{
     width: 293px;
